migrate to ConfigNode-based